--- a/registration.html
+++ b/registration.html
@@ -23,9 +23,9 @@
   <label id="login_lable" class="login-lable" ></label>
   <input id="login" class="input-login" placeholder=" введите ваш логин"  >
   <label id="pass_lable" class="pass_lable"></label>
-  <input id="input-password" class="input-password" placeholder=" введите ваш пароль" >
+  <input id="input-password" class="input-password" placeholder=" введите ваш пароль" type="password" >
   <label id="passrep_lable" class="passrep_lable"></label>
-  <input id="input-password-raplase" class="input-password-raplace" placeholder=" повтарите пароль" >
+  <input id="input-password-raplase" class="input-password-raplace" placeholder=" повтарите пароль" type="password">
   <div class="erorr" id="erorr"></div>
   <button type="submit" id="submit" class="submit_go" onclick="regis()">вход</button>
 
@@ -35,5 +35,6 @@
 </div>
 
 <script src="./js/registration.js"></script>
+<script src="./js/protection.mjs"></script>
 </body>
 </html>
